--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .App {
+  background-image: url(./images/foodBackground.jpg);
+  width: 100%;
+  min-height: 100vh;
+  padding: 70px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  width: 100%;
+  color: white;
+  background-color: rgb(27, 53, 27);
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  box-shadow: 0 3px 6px 0 #555;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.appName {
+  display: flex;
+  align-items: center;
+}
+
+input {
+  display: flex;
+  flex-direction: row;
+  margin-inline: 1rem;
+  margin-block: 2rem;
+  width: 700px;
+  padding: 10px;
+  border-radius: 6px;
+}
+
+button {
+  height: 40px;
+  padding: 15px;
+  border-radius: 6px;
+}
+
+.element {
+  margin-block: 2rem;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 4rem;
 }
 
-.App-link {
-  color: #61dafb;
+.foodImage {
+  max-width: 250px;
+  border-radius: 50;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.element-div {
+  height: 500px;
+  border: 3px solid #000;
+} 
